# pyodoo_connector

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: pytest.yml  python-package.yml
odoo_connect/: odoo.py  proxies.py
odoo_connector/: __init__.py  core.py  tools.py
pyodoo_connect/: __init__.py  http.py  odoo.py  proxies.py  tools.py
tests/: __init__.py  test_core.py  test_odoo.py
