[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyodoo_connect"
version = "0.3.0"
description = "A Python package to interact with Odoo via JSON-RPC."
authors = [{ name = "Fasil", email = "fasilwdr@hotmail.com" }]
license = { file = "LICENSE" }
readme = "README.md"
dependencies = [
    "httpx>=0.24.0"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"