[metadata]
name = pyodoo_connector
version = 0.1.0
author = Fasil
author_email = fasilwdr@hotmail.com
description = A Python package to interact with Odoo via JSON-RPC.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fasilwdr/pyodoo_connector
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
python_requires = >=3.6